public interface Manager {
    public boolean requestbonus(Employee e, double bonus);
    public void setHeadcount(int heads);
    public boolean hasHeadCount();
}
